refactor: better route management for API + refactor packages and split html/js files + minor changes

--- a/src/app/api/admin/apiDashboard.html
+++ b/src/app/api/admin/apiDashboard.html
@@ -15,7 +15,6 @@
     limitations under the License.
 
 -->
-
-<section>
-  <md-card ui-view />
-</section>
+<md-card-content>
+  <chart config="chartConfig"></chart>
+</md-card-content>
