--- a/src/app/documentation/documentation.html
+++ b/src/app/documentation/documentation.html
@@ -16,7 +16,7 @@
 
 -->
 <section>
-  <section class="content-header">
+  <section class="documentation-content-header">
     <h1>
        Gravitee
        <small>APIs Documentation</small>
