--- a/src/app/api/apisTableMode.html
+++ b/src/app/api/apisTableMode.html
@@ -31,8 +31,8 @@
 		</tr>
 		</thead>
 		<tbody>
-		<tr md-auto-select ng-repeat="api in apiCtrl.apis" title="{{api.description}}">
-			<td><a href="" ng-click="apiCtrl.showApiModal(api)">{{api.name}}</a></td>
+		<tr md-auto-select ng-repeat="api in apisCtrl.apis" title="{{api.description}}">
+			<td><a href="" ng-click="apisCtrl.showApiModal(api)">{{api.name}}</a></td>
 			<td>{{api.version}}</td>
 			<td>{{api.private?'Private':'Public'}}</td>
 			<td>{{api.proxy.context_path}}</td>
