--- a/src/app/documentation/documentation.scss
+++ b/src/app/documentation/documentation.scss
@@ -2,17 +2,17 @@ a.md-button:not([disabled]).selected, .md-button:not([disabled]).selected {
   background-color: rgba(158,158,158,0.2);
 }
 
-.content-header {
+.documentation-content-header {
     position: relative;
     padding: 15px 15px 0px;
 }
 
-.content-header > h1 {
+.documentation-content-header > h1 {
     margin: 0px;
     font-size: 24px;
 }
 
-.content-header > h1 > small {
+.documentation-content-header > h1 > small {
     font-size: 15px;
     display: inline-block;
     padding-left: 4px;
