--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -63,11 +63,11 @@
 						Learn more about your APIs
 					</p>
 				</div>
-				<div layout="row" layout-wrap class="inset" ng-controller="ApiController as apiCtrl">
-					<div class="apis-box" flex="33" ng-repeat="api in apiCtrl.apis">
+				<div layout="row" layout-wrap class="inset" ng-controller="ApisController as apisCtrl">
+					<div class="apis-box" flex="33" ng-repeat="api in apisCtrl.apis">
 						<a href="#/apis/{{api.name}}">
 							<md-card class="api-box">
-								<div class="api-box-header" ng-style="{'background-color': apiCtrl.bgColorByIndex($index)}">
+								<div class="api-box-header" ng-style="{'background-color': apisCtrl.bgColorByIndex($index)}">
 									<h3>{{api.name}}</h3>
 									<h5>{{api.version}}</h5>
 								</div>
