feat: add services for members' and apis' application

--- a/src/app/api/dialog/api.dialog.html
+++ b/src/app/api/dialog/api.dialog.html
@@ -29,7 +29,7 @@
       </md-toolbar>
       <md-dialog-content>
         <div layout="">
-          <md-input-container ng-if="!editMode">
+          <md-input-container>
             <label>Name *</label>
             <input ng-model="api.name" required>
           </md-input-container>
