--- a/src/app/application/applicationsVisu.html
+++ b/src/app/application/applicationsVisu.html
@@ -17,7 +17,7 @@
 -->
 <div layout="row" layout-wrap class="inset">
 	<div class="apis-box" flex="33" ng-repeat="application in applicationCtrl.applications">
-		<a href="#/applications/{{application.name}}">
+		<a href="#/applications/{{application.id}}">
 			<md-card class="api-box">
 				<div class="api-box-header" ng-style="{'background-color': applicationCtrl.bgColorByIndex($index)}">
 					<h3>{{application.name}}</h3>
