refactor: get api by id and not by name anymore

--- a/src/app/api/admin/apiAdmin.html
+++ b/src/app/api/admin/apiAdmin.html
@@ -15,8 +15,8 @@
     limitations under the License.
 
 -->
-<section>
-  <section class="content-header" layout="row">
+<section class="content-header">
+  <div layout="row">
     <md-button class="md-fab md-mini md-primary" ui-sref="apis.list.thumb" aria-label="List of APIs">
       <ng-md-icon icon="menu"></ng-md-icon>
     </md-button>
@@ -25,7 +25,7 @@
       {{apiCtrl.api.name}}
       <small>{{apiCtrl.api.description}}</small>
     </h1>
-  </section>
+  </div>
 
   <md-card>
     <md-card-content>
