--- a/src/app/api/apisList.html
+++ b/src/app/api/apisList.html
@@ -15,15 +15,17 @@
     limitations under the License.
 
 -->
-<md-card-content class="content-header">
-  <md-switch ng-model="apisCtrl.tableMode" ng-change="apisCtrl.onModeChange()" class="md-block">
-    Table mode
-  </md-switch>
+<md-card>
+  <md-card-content class="content-header">
+    <md-switch ng-model="apisCtrl.tableMode" ng-change="apisCtrl.onModeChange()" class="md-block">
+      Table mode
+    </md-switch>
 
-  <div ui-view />
+    <div ui-view></div>
 
-<md-button class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="apisCtrl.showApiModal()">
-  <ng-md-icon icon="add"></ng-md-icon>
-</md-button>
+    <md-button class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="apisCtrl.showApiModal()">
+      <ng-md-icon icon="add"></ng-md-icon>
+    </md-button>
 
-</md-card-content>
+  </md-card-content>
+</md-card>
