refactor: change the way to select an api in table mode and remember the mode on api list back

--- a/src/app/api/admin/apiAdmin.html
+++ b/src/app/api/admin/apiAdmin.html
@@ -17,7 +17,7 @@
 -->
 <section class="content-header">
   <div layout="row">
-    <md-button class="md-fab md-mini md-primary" ui-sref="apis.list.thumb" aria-label="List of APIs">
+    <md-button class="md-fab md-mini md-primary" ng-click="apiCtrl.backToPreviousState()" aria-label="List of APIs">
       <ng-md-icon icon="menu"></ng-md-icon>
     </md-button>
 
