--- a/src/app/api/apisList.html
+++ b/src/app/api/apisList.html
@@ -21,7 +21,7 @@
       Table mode
     </md-switch>
 
-    <div ui-view></div>
+    <div ui-view style="margin-bottom: 100px;"></div>
 
     <md-button class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="apisCtrl.showApiModal()">
       <ng-md-icon icon="add"></ng-md-icon>
