--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -94,6 +94,10 @@ md-toolbar.md-tall {
   min-height: 100px;
 }
 
+tr[ui-sref] {
+  cursor: pointer;
+}
+
 /**
  *  Do not remove this comments bellow. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
