refactor: fix applications controller name

--- a/src/app/application/applications.html
+++ b/src/app/application/applications.html
@@ -30,7 +30,7 @@
 		<md-card-content ui-view />
 	</md-card>  
 
-	<md-button class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="applicationCtrl.showAddApplicationModal($event)">
+	<md-button class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="applicationsCtrl.showAddApplicationModal($event)">
   	<ng-md-icon icon="add"></ng-md-icon>
 	</md-button>
 </section>
