--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -63,41 +63,7 @@
 						Learn more about your APIs
 					</p>
 				</div>
-				<div layout="row" layout-wrap class="inset" ng-controller="ApisController as apisCtrl">
-					<div class="apis-box" flex="33" ng-repeat="api in apisCtrl.apis">
-						<a href="#/apis/{{api.name}}">
-							<md-card class="api-box">
-								<div class="api-box-header" ng-style="{'background-color': apisCtrl.bgColorByIndex($index)}">
-									<h3>{{api.name}}</h3>
-									<h5>{{api.version}}</h5>
-								</div>
-								<div class="widget-user-image">
-		          	</div>
-								<md-card-content>
-									<div layout="row">
-				            <div flex="50" class="border-right">
-				              <div class="description-block">
-				                <h5 class="description-header">0</h5>
-				                <span class="description-text">APPLICATIONS</span>
-				              </div>
-				            </div>
-				            <div flex="50">
-				              <div class="description-block">
-				                <h5 class="description-header">0</h5>
-				                <span class="description-text">LIKERS</span>
-				              </div>
-				            </div>
-		            	</div>
-								</md-card-content>
-							</md-card>
-						</a>
-    			</div>
-			</div>
-			<div style="text-align:center;">
-				<ul class="pagination">
-					<li><a href="#">...</a></li>
-				</ul>
-			</div>
+				<div ng-include="'app/api/apisThumbMode.html'"></div>
 		</section>
 	 </section>
 	</md-content>
