--- a/src/app/application/dialog/application.dialog.html
+++ b/src/app/application/dialog/application.dialog.html
@@ -43,7 +43,7 @@
 		      <div layout="">
 		        <md-input-container>
 		          <label>Type</label>
-		          <input ng-model="application.type" required>
+		          <input ng-model="application.type">
 		        </md-input-container>
 		      </div>
 		      <md-subheader class="md-warn" ng-bind="error"></md-subheader>
