--- a/src/app/api/apisTableMode.html
+++ b/src/app/api/apisTableMode.html
@@ -19,22 +19,28 @@
 	<table md-data-table>
 		<thead md-order="order">
 		<tr>
+			<th></th>
 			<th name="Name" order-by="name"></th>
 			<th name="Version" order-by="version"></th>
 			<th name="Visibility" order-by="visibility"></th>
 			<th name="Context path" order-by="proxy.context_path"></th>
 			<th name="State" order-by="state"></th>
+			<th></th>
 		</tr>
 		</thead>
 		<tbody>
-			<tr ng-repeat="api in apisCtrl.apis | orderBy: order" title="{{api.description}}" ui-sref="apis.admin.general({apiId: api.id})">
+			<tr ng-repeat="api in apisCtrl.apis | orderBy: order" title="{{api.description}}" ui-sref="apis.portal({apiId: api.id})">
+				<td><ng-md-icon icon="{{api.visibility === 'public'? 'lock_open' : 'lock'}}"></ng-md-icon></td>
 				<td>{{api.name}}</td>
 				<td>{{api.version}}</td>
 				<td>{{api.visibility}}</td>
 				<td>{{api.proxy.context_path}}</td>
 				<td>
-					<ng-md-icon ng-if="api.state === 'STARTED'" icon="blur_on" size="32" style="fill: green;" title="Started"></ng-md-icon>
-					<ng-md-icon ng-if="api.state !== 'STARTED'" icon="blur_off" size="32" style="fill: red;" title="Stopped"></ng-md-icon>
+					<ng-md-icon ng-if="api.state === 'started'" icon="blur_on" size="32" style="fill: green;" title="Started"></ng-md-icon>
+					<ng-md-icon ng-if="api.state !== 'started'" icon="blur_off" size="32" style="fill: red;" title="Stopped"></ng-md-icon>
+				</td>
+				<td ng-click="$event.stopPropagation()">
+					<ng-md-icon icon="settings" ui-sref="apis.admin.general({apiId: api.id})" aria-label="{{api.id}}"></ng-md-icon>
 				</td>
 			</tr>
 		</tbody>
