--- a/src/app/api/admin/apiAdmin.html
+++ b/src/app/api/admin/apiAdmin.html
@@ -39,7 +39,7 @@
         <md-tab label="documentation" ui-sref="apis.admin.documentation">
         </md-tab>
       </md-tabs>
-      <md-switch ng-model="enabled" ng-change="enabled?apiCtrl.start(apiCtrl.api.id):apiCtrl.stop(apiCtrl.api.id)" class="md-block">
+      <md-switch ng-model="enabled" ng-change="apiCtrl.changeLifecycle(apiCtrl.api.id)" class="md-block">
         Enabled
       </md-switch>
       <div ui-view flex></div>
