--- a/src/app/api/apisThumbMode.html
+++ b/src/app/api/apisThumbMode.html
@@ -26,7 +26,7 @@
 						<h5>{{api.description}}</h5>
 					</div>
 					<md-button class="md-icon-button md-icon-right" ng-click="$event.stopPropagation()">
-						<ng-md-icon icon="settings" ui-sref="apis.admin.dashboard({apiId: api.id})" aria-label="{{api.id}}"></ng-md-icon>
+						<ng-md-icon icon="settings" ui-sref="apis.admin.analytics({apiId: api.id})" aria-label="{{api.id}}"></ng-md-icon>
 					</md-button>
 				</div>
 				<md-card-content>
